# cuZK

./: .gitignore  CMakeLists.txt  Makefile  PROFILING_GUIDE.md  README.md  benchmark_poseidon_cuda.sh  ncu_cli_analysis_guide.md  profile_poseidon_ncu.sh  profile_poseidon_nsys.sh  run_merkle_benchmarks.sh  run_poseidon_benchmark.sh
scripts/: install_nsight_compute.sh  install_nsight_system.sh
src/common/: error_handling.hpp  namespace_utils.hpp
src/freivald/: CMakeLists.txt  README.md  example.cpp  matrix_generator.cpp  matrix_generator.h  prover.h  verifier.cpp  verifier.h
src/freivald/test/: benchmark_verification.cpp  test_freivald.cpp
src/merkle_tree/: CMakeLists.txt  merkle_tree.cpp  merkle_tree.hpp  merkle_tree_cuda.cu  merkle_tree_cuda.cuh
src/merkle_tree/test/: test_merkle_benchmark.cpp  test_merkle_benchmark_cuda.cpp  test_merkle_tree.cpp  test_merkle_tree_cuda.cpp
src/mv_polynomial/: CMakeLists.txt  mv_polynomial.cpp  mv_polynomial.hpp
src/mv_polynomial/test/: CMakeLists.txt  test_mv_polynomial.cpp
src/poseidon/: CMakeLists.txt  cuda_field_element.cu  field_arithmetic.cpp  field_arithmetic.hpp  field_arithmetic_cuda.cu  field_arithmetic_cuda.cuh  poseidon.cpp  poseidon.hpp  poseidon_cuda.cu  poseidon_cuda.cuh
src/poseidon/cuda/: cuda_field_element.cu  cuda_field_element.cuh  field_arithmetic_cuda.cu  field_arithmetic_cuda.cuh  poseidon_cuda.cu  poseidon_cuda.cuh  poseidon_cuda_benchmarks.cpp  poseidon_cuda_benchmarks.hpp  poseidon_cuda_optimized.cu  poseidon_cuda_optimized.cuh  poseidon_cuda_profiler.cpp  poseidon_interface_cuda.hpp
src/poseidon/test/: benchmark.cpp  test_field_accumulation.cpp  test_field_arithmetic.cpp  test_field_arithmetic_cuda.cpp  test_poseidon.cpp  test_poseidon_cuda.cpp
